# Django-Connection-Sample

./: .env  CODE_QUALITY_IMPROVEMENT_REPORT.md  COMMUNICATION_FLOW.md  Dockerfile  NETWORK_ARCHITECTURE.md  NETWORK_FLOW_DIAGRAM.md  README.md  README_GRAPHML_CSV.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  app_launcher.py  dash_advanced_reset.py  dash_graphml_csv.py  dash_refactored.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  unified_launcher.py
config/: graph_config.json  graphml_csv_config.json  web_architecture_config.json
data/: sample_graph.graphml  sample_table.csv
myproject/: asgi.py  settings.py  urls.py
sampleapp/: admin.py  apps.py  consumers.py  models.py  tasks.py  urls.py  views.py
sampleapp/migrations/: 0001_initial.py
templates/: base.html
templates/sampleapp/: create.html  detail.html  index.html
utils/: graph_loader.py  graphml_csv_loader.py
