[project]
name = "django-nginx-sample"
version = "0.1.0"
description = "Django + Nginx sample application"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "django>=4.2.7",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.7",
    "django-cors-headers>=4.3.1",
    "dj-database-url>=2.1.0",
    "channels[daphne]>=4.0.0",
    "channels-redis>=4.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myproject"]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]